fix bug on mobile widescreen

--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -47,10 +47,6 @@
     margin-bottom: 2rem;
   }
 
-  .cardImg {
-    max-width: 339px;
-  }
-
   .cardContent {
     width: 100%;
     display: flex;
